修改js文件引用

--- a/html/Basics/ClassAndStyleBindings.html
+++ b/html/Basics/ClassAndStyleBindings.html
@@ -27,7 +27,7 @@
 			
 		</div>
 	</body>
-	<script src="./vue.js"></script>
+	<script src="/js/vue.js"></script>
 	
 	<script>
 		var vm =new Vue({
